Heketi glusterfs changes:
- allow volume expansion for storageclass
- glusterfs mem limit increased to 1.5Gi

--- a/contrib/network-storage/heketi/roles/provision/templates/storageclass.yml.j2
+++ b/contrib/network-storage/heketi/roles/provision/templates/storageclass.yml.j2
@@ -6,6 +6,7 @@ metadata:
   annotations:
     storageclass.beta.kubernetes.io/is-default-class: "true"
 provisioner: kubernetes.io/glusterfs
+allowVolumeExpansion: true
 parameters:
   resturl: "http://{{ endpoint_address }}:8080"
   restuser: "admin"
